--- a/VRChat/66/1303966.html
+++ b/VRChat/66/1303966.html
@@ -76,9 +76,9 @@
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <div class="page-wrap">
       <main role="main">
-        <div class="market-item-detail" data-product-brand=
-        "catrusty" data-product-category="127" data-product-id=
-        "1303966" data-product-list="market_show"
+        <div class="market-item-detail u-bg-white"
+        data-product-brand="catrusty" data-product-category="127"
+        data-product-id="1303966" data-product-list="market_show"
         data-product-price="700" data-tracking="detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
@@ -102,14 +102,15 @@
             </div>
           </nav>
           <article>
-            <div class="market-item-detail-article">
+            <div class=
+            "market-item-detail-article u-d-flex u-flex-column u-align-items-center u-pb-600 u-bg-white">
               <div class=
               "market-item-detail__exhibition-banner container">
               </div>
-              <div class="market-item-detail-article__body">
+              <div class="u-bg-white u-pt-600 u-px-700">
                 <div class="container">
-                  <div class="lo-grid">
-                    <div class="flex-order-summary">
+                  <div class="u-d-flex">
+                    <div class="u-order-1 l-col-2of5 u-pl-600">
                       <header>
                         <div class="u-mb-200">
                           <div class="eventname-flag">
@@ -123,8 +124,7 @@
                             </div></a>
                           </div>
                         </div>
-                        <div class=
-                        "flex-order-summary-shop_name-field">
+                        <div class="u-my-200 u-tpg-title3">
                           <a class="nav" target="_blank"
                           data-product-list=
                           "from market_show via market_item_detail to shop_index"
@@ -135,13 +135,13 @@
                             <img alt="CaTrusty" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/3903412/icon_image/a6acaef4-393b-4970-b00a-ef435146f4d9_base_resized.jpg">
-                            <div class=
-                            "flex-order-summary-shop_name">
+                            <div class="u-text-ellipsis">
                               CaTrusty
                             </div>
                           </div></a>
                         </div>
-                        <h2 class="item-summary__item-name">
+                        <h2 class=
+                        "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
                           サンクスタンプ
                         </h2>
                         <div class="item-summary__caption"></div>
@@ -229,17 +229,16 @@
                         </ul>
                       </section>
                       <section>
-                        <div class="share-btns">
-                          <div class="social-btn twitter">
-                            <a data-url=
-                            "https://booth.pm/ja/items/1303966"
-                            data-lang="ja" data-hashtags="booth_pm"
-                            data-text="サンクスタンプ | CaTrusty"
-                            data-count="none" class=
-                            "twitter-share-button" href=
-                            "https://twitter.com/share">ツイート</a>
-                          </div>
-                          <div class="social-btn facebook">
+                        <div class=
+                        "share-btns u-d-flex u-flex-1 u-align-items-center u-justify-content-start u-px-200 u-py-400">
+                          <a data-url=
+                          "https://booth.pm/ja/items/1303966"
+                          data-lang="ja" data-hashtags="booth_pm"
+                          data-text="サンクスタンプ | CaTrusty"
+                          data-count="none" class=
+                          "twitter-share-button" href=
+                          "https://twitter.com/share">ツイート</a>
+                          <div class="u-ml-300">
                             <div class="fb-like" data-action="like"
                             data-href=
                             "https://booth.pm/ja/items/1303966"
@@ -249,7 +248,7 @@
                         </div>
                       </section>
                     </div>
-                    <div class="flex-order-body">
+                    <div class="u-order-0 l-col-3of5 u-pr-500">
                       <div class="primary-image-area">
                         <div>
                           <div class=
@@ -282,8 +281,8 @@
                       </div>
                       <section>
                         <div class=
-                        "market-item-detail-description">
-                          <p class="autolink">
+                        "js-market-item-detail-description">
+                          <p class="autolink u-text-wrap">
                             バーチャルマーケット2のブースにて展示していた杖のようなスタンプです。
                             シルヴィーヌがTRPG卓中で使用していた愛杖をイメージして作成されました。白龍の爪を象ったデザインになっています。
                             手順書に従いアニメーションを作成することにより、「ありがとう（ハート）」「エモい!!!」「はなまる」のスタンプをゲーム内ワールド座標固定で押すことができます。
@@ -301,8 +300,7 @@
                         </div>
                       </section>
                       <section>
-                        <div class=
-                        "market-item-detail-module page_design" id=
+                        <div class="u-text-wrap page_design" id=
                         "modules"></div>
                       </section>
                     </div>
