--- a/VRChat/36/1301536.html
+++ b/VRChat/36/1301536.html
@@ -77,9 +77,9 @@
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <div class="page-wrap">
       <main role="main">
-        <div class="market-item-detail" data-product-brand=
-        "hatoshop42" data-product-category="127" data-product-id=
-        "1301536" data-product-list="market_show"
+        <div class="market-item-detail u-bg-white"
+        data-product-brand="hatoshop42" data-product-category="127"
+        data-product-id="1301536" data-product-list="market_show"
         data-product-price="100" data-tracking="detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
@@ -103,17 +103,17 @@
             </div>
           </nav>
           <article>
-            <div class="market-item-detail-article">
+            <div class=
+            "market-item-detail-article u-d-flex u-flex-column u-align-items-center u-pb-600 u-bg-white">
               <div class=
               "market-item-detail__exhibition-banner container">
               </div>
-              <div class="market-item-detail-article__body">
+              <div class="u-bg-white u-pt-600 u-px-700">
                 <div class="container">
-                  <div class="lo-grid">
-                    <div class="flex-order-summary">
+                  <div class="u-d-flex">
+                    <div class="u-order-1 l-col-2of5 u-pl-600">
                       <header>
-                        <div class=
-                        "flex-order-summary-shop_name-field">
+                        <div class="u-my-200 u-tpg-title3">
                           <a class="nav" target="_blank"
                           data-product-list=
                           "from market_show via market_item_detail to shop_index"
@@ -124,13 +124,13 @@
                             <img alt="レストラン数論研究局" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/2531861/icon_image/d7d9b61a-760a-4460-b006-1b9c1fcd5bac_base_resized.jpg">
-                            <div class=
-                            "flex-order-summary-shop_name">
+                            <div class="u-text-ellipsis">
                               レストラン数論研究局
                             </div>
                           </div></a>
                         </div>
-                        <h2 class="item-summary__item-name">
+                        <h2 class=
+                        "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
                           【無配】墺式先進戦闘銃【VRC想定】
                         </h2>
                         <div class="item-summary__caption"></div>
@@ -333,18 +333,17 @@
                         </ul>
                       </section>
                       <section>
-                        <div class="share-btns">
-                          <div class="social-btn twitter">
-                            <a data-url=
-                            "https://booth.pm/ja/items/1301536"
-                            data-lang="ja" data-hashtags="booth_pm"
-                            data-text=
-                            "【無配】墺式先進戦闘銃【VRC想定】 | レストラン数論研究局"
-                            data-count="none" class=
-                            "twitter-share-button" href=
-                            "https://twitter.com/share">ツイート</a>
-                          </div>
-                          <div class="social-btn facebook">
+                        <div class=
+                        "share-btns u-d-flex u-flex-1 u-align-items-center u-justify-content-start u-px-200 u-py-400">
+                          <a data-url=
+                          "https://booth.pm/ja/items/1301536"
+                          data-lang="ja" data-hashtags="booth_pm"
+                          data-text=
+                          "【無配】墺式先進戦闘銃【VRC想定】 | レストラン数論研究局"
+                          data-count="none" class=
+                          "twitter-share-button" href=
+                          "https://twitter.com/share">ツイート</a>
+                          <div class="u-ml-300">
                             <div class="fb-like" data-action="like"
                             data-href=
                             "https://booth.pm/ja/items/1301536"
@@ -354,7 +353,7 @@
                         </div>
                       </section>
                     </div>
-                    <div class="flex-order-body">
+                    <div class="u-order-0 l-col-3of5 u-pr-500">
                       <div class="primary-image-area">
                         <div>
                           <div class=
@@ -426,8 +425,8 @@
                       </div>
                       <section>
                         <div class=
-                        "market-item-detail-description">
-                          <p class="autolink">
+                        "js-market-item-detail-description">
+                          <p class="autolink u-text-wrap">
                             1980～90年代に行われた米軍の次世代戦闘銃開発計画、ACR計画にオーストリアの某社が提出したかっこいいあの銃をおおむね再現した.fbxの3Dモデルです。
                             △11173 VRChatやその他の諸々にお使いください。
                             フレシェット弾を毎分1200発で発射し、リングプライマーの樹脂薬莢、極めつけは垂直に上下する薬室というめちゃくちゃ冒険しているおもしろ銃です。
@@ -441,8 +440,7 @@
                         </div>
                       </section>
                       <section>
-                        <div class=
-                        "market-item-detail-module page_design" id=
+                        <div class="u-text-wrap page_design" id=
                         "modules"></div>
                       </section>
                     </div>
