--- a/VRChat/16/1299116.html
+++ b/VRChat/16/1299116.html
@@ -78,10 +78,10 @@
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <div class="page-wrap">
       <main role="main">
-        <div class="market-item-detail" data-product-brand="ymz80a"
-        data-product-category="141" data-product-id="1299116"
-        data-product-list="market_show" data-product-price="500"
-        data-tracking="detail_item">
+        <div class="market-item-detail u-bg-white"
+        data-product-brand="ymz80a" data-product-category="141"
+        data-product-id="1299116" data-product-list="market_show"
+        data-product-price="500" data-tracking="detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
               <div class="container">
@@ -105,17 +105,17 @@
             </div>
           </nav>
           <article>
-            <div class="market-item-detail-article">
+            <div class=
+            "market-item-detail-article u-d-flex u-flex-column u-align-items-center u-pb-600 u-bg-white">
               <div class=
               "market-item-detail__exhibition-banner container">
               </div>
-              <div class="market-item-detail-article__body">
+              <div class="u-bg-white u-pt-600 u-px-700">
                 <div class="container">
-                  <div class="lo-grid">
-                    <div class="flex-order-summary">
+                  <div class="u-d-flex">
+                    <div class="u-order-1 l-col-2of5 u-pl-600">
                       <header>
-                        <div class=
-                        "flex-order-summary-shop_name-field">
+                        <div class="u-my-200 u-tpg-title3">
                           <a class="nav" target="_blank"
                           data-product-list=
                           "from market_show via market_item_detail to shop_index"
@@ -126,13 +126,13 @@
                             <img alt="「ウォーパルド航空開発研究所」販売支部" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/4877489/icon_image/c2c764f2-6df3-4a32-bfa0-c24477881cd1_base_resized.jpg">
-                            <div class=
-                            "flex-order-summary-shop_name">
+                            <div class="u-text-ellipsis">
                               「ウォーパルド航空開発研究所」販売支部
                             </div>
                           </div></a>
                         </div>
-                        <h2 class="item-summary__item-name">
+                        <h2 class=
+                        "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
                           アレッガ自叙伝 ～僕が蕎麦屋の戦闘機になったわけ～
                         </h2>
                         <div class="item-summary__caption"></div>
@@ -269,18 +269,17 @@
                         </ul>
                       </section>
                       <section>
-                        <div class="share-btns">
-                          <div class="social-btn twitter">
-                            <a data-url=
-                            "https://booth.pm/ja/items/1299116"
-                            data-lang="ja" data-hashtags="booth_pm"
-                            data-text=
-                            "アレッガ自叙伝 ～僕が蕎麦屋の戦闘機になったわけ～ | 「ウォーパルド航空開発研究所」販売支部"
-                            data-count="none" class=
-                            "twitter-share-button" href=
-                            "https://twitter.com/share">ツイート</a>
-                          </div>
-                          <div class="social-btn facebook">
+                        <div class=
+                        "share-btns u-d-flex u-flex-1 u-align-items-center u-justify-content-start u-px-200 u-py-400">
+                          <a data-url=
+                          "https://booth.pm/ja/items/1299116"
+                          data-lang="ja" data-hashtags="booth_pm"
+                          data-text=
+                          "アレッガ自叙伝 ～僕が蕎麦屋の戦闘機になったわけ～ | 「ウォーパルド航空開発研究所」販売支部"
+                          data-count="none" class=
+                          "twitter-share-button" href=
+                          "https://twitter.com/share">ツイート</a>
+                          <div class="u-ml-300">
                             <div class="fb-like" data-action="like"
                             data-href=
                             "https://booth.pm/ja/items/1299116"
@@ -290,7 +289,7 @@
                         </div>
                       </section>
                     </div>
-                    <div class="flex-order-body">
+                    <div class="u-order-0 l-col-3of5 u-pr-500">
                       <div class="primary-image-area">
                         <div>
                           <div class=
@@ -337,8 +336,8 @@
                       </div>
                       <section>
                         <div class=
-                        "market-item-detail-description">
-                          <p class="autolink">
+                        "js-market-item-detail-description">
+                          <p class="autolink u-text-wrap">
                             アレッガの技術屋さんが蕎麦屋従業員になった経緯や
                             そもそもシューティングゲームに興味を持ったかつらつらと書かれた書籍。
                             内容はマッハ新書に近く、自叙伝にも近い。そんなフランクな読み物です。
@@ -347,8 +346,7 @@
                         </div>
                       </section>
                       <section>
-                        <div class=
-                        "market-item-detail-module page_design" id=
+                        <div class="u-text-wrap page_design" id=
                         "modules"></div>
                       </section>
                     </div>
