--- a/VRChat/23/1298423.html
+++ b/VRChat/23/1298423.html
@@ -78,9 +78,9 @@
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <div class="page-wrap">
       <main role="main">
-        <div class="market-item-detail" data-product-brand=
-        "moscowmule" data-product-category="127" data-product-id=
-        "1298423" data-product-list="market_show"
+        <div class="market-item-detail u-bg-white"
+        data-product-brand="moscowmule" data-product-category="127"
+        data-product-id="1298423" data-product-list="market_show"
         data-product-price="100" data-tracking="detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
@@ -104,17 +104,17 @@
             </div>
           </nav>
           <article>
-            <div class="market-item-detail-article">
+            <div class=
+            "market-item-detail-article u-d-flex u-flex-column u-align-items-center u-pb-600 u-bg-white">
               <div class=
               "market-item-detail__exhibition-banner container">
               </div>
-              <div class="market-item-detail-article__body">
+              <div class="u-bg-white u-pt-600 u-px-700">
                 <div class="container">
-                  <div class="lo-grid">
-                    <div class="flex-order-summary">
+                  <div class="u-d-flex">
+                    <div class="u-order-1 l-col-2of5 u-pl-600">
                       <header>
-                        <div class=
-                        "flex-order-summary-shop_name-field">
+                        <div class="u-my-200 u-tpg-title3">
                           <a class="nav" target="_blank"
                           data-product-list=
                           "from market_show via market_item_detail to shop_index"
@@ -126,13 +126,13 @@
                             "Moscowmule Mode Design Studio" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/4745659/icon_image/98f87a12-035f-405a-a443-b564144383cc_base_resized.jpg">
-                            <div class=
-                            "flex-order-summary-shop_name">
+                            <div class="u-text-ellipsis">
                               Moscowmule Mode Design Studio
                             </div>
                           </div></a>
                         </div>
-                        <h2 class="item-summary__item-name">
+                        <h2 class=
+                        "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
                           【無料配布】大吟醸　令和　[平成31年４月製造品・令和元年５月製造品]
                         </h2>
                         <div class="item-summary__caption"></div>
@@ -272,18 +272,17 @@
                         </ul>
                       </section>
                       <section>
-                        <div class="share-btns">
-                          <div class="social-btn twitter">
-                            <a data-url=
-                            "https://booth.pm/ja/items/1298423"
-                            data-lang="ja" data-hashtags="booth_pm"
-                            data-text=
-                            "【無料配布】大吟醸　令和　[平成31年４月製造品・令和元年５月製造品] | Moscowmule Mode Design Studio"
-                            data-count="none" class=
-                            "twitter-share-button" href=
-                            "https://twitter.com/share">ツイート</a>
-                          </div>
-                          <div class="social-btn facebook">
+                        <div class=
+                        "share-btns u-d-flex u-flex-1 u-align-items-center u-justify-content-start u-px-200 u-py-400">
+                          <a data-url=
+                          "https://booth.pm/ja/items/1298423"
+                          data-lang="ja" data-hashtags="booth_pm"
+                          data-text=
+                          "【無料配布】大吟醸　令和　[平成31年４月製造品・令和元年５月製造品] | Moscowmule Mode Design Studio"
+                          data-count="none" class=
+                          "twitter-share-button" href=
+                          "https://twitter.com/share">ツイート</a>
+                          <div class="u-ml-300">
                             <div class="fb-like" data-action="like"
                             data-href=
                             "https://booth.pm/ja/items/1298423"
@@ -293,7 +292,7 @@
                         </div>
                       </section>
                     </div>
-                    <div class="flex-order-body">
+                    <div class="u-order-0 l-col-3of5 u-pr-500">
                       <div class="primary-image-area">
                         <div>
                           <div class=
@@ -315,8 +314,8 @@
                       </div>
                       <section>
                         <div class=
-                        "market-item-detail-description">
-                          <p class="autolink">
+                        "js-market-item-detail-description">
+                          <p class="autolink u-text-wrap">
                             今大人気の大吟醸「令和」入荷いたしました。平成最後から令和最初にかけたこの時期しか出回らない幻のお酒です。
                             ※お酒は二十歳になってから 以下諸元 unitypackageにて配布。
                             VRCやバーチャルキャストにぴったり。
@@ -326,8 +325,7 @@
                         </div>
                       </section>
                       <section>
-                        <div class=
-                        "market-item-detail-module page_design" id=
+                        <div class="u-text-wrap page_design" id=
                         "modules"></div>
                       </section>
                     </div>
